# ZNWorkload

./: .gitignore  .gitmodules  Doxyfile  LICENSE  README.md  WORKLOADS.md  architecture.md  build-deps.sh  meson.build  meson_options.txt
.github/workflows/: .test.yml
docs/: PERF.md  REMOTE_TRANSFER_EVAL.md  WORKLOADS.md
eval/boxplot/: boxplot.py
eval/plotting/: .gitignore  bytes.py  lat.py  plot.py  plot.sh  stats.py  throughput.py
eval/remotetransfer/: populate.py  pulltest.py  requirements.txt
include/: cachemap.h  eviction_policy.h  eviction_policy_chunk.h  eviction_policy_mgr.h  eviction_policy_promotional.h  global.h  minheap.h  profiling.h  ze_cache.h  ze_cache_map.h  ze_evict_policy.h  ze_promotional_eviction_policy.h  ze_rw_lock.h  ze_util.h  ze_zone_state.h  znbackend.h  zncache.h  znprofiler.h  znutil.h  zone_state_manager.h  zone_state_mgr.h
scripts/: nullblk-zoned-delete.sh  nullblk-zoned.sh  nullblk.sh  precondition-nvme1n1.sh  run_workloads.sh  split-metrics.sh
src/: cache.c  cachemap.c  eviction_policy.c  eviction_policy_mgr.c  meson.build  minheap.c  profiling.c  util.c  ze_cache.c  ze_cache_map.c  ze_promotional_eviction_policy.c  ze_rw_lock.c  ze_util.c  ze_zone_state.c  zncache.c  znprofiler.c  znutil.c  zone_state_manager.c  zone_state_mgr.c
src/eviction/: chunk.c  promotional.c  zone.c
subprojects/zone-evict-ideal/: meson.build  zone-evict-ideal.c  zone-evict-ideal.h
subprojects/zone-evict-unideal/: meson.build  zone-evict-ideal.c  zone-evict-unideal.c  zone-evict-unideal.h
tests/: chunk_eviction.c  device_tests.c  meson.build  minheap.c  minheap_concurrent.c
