option('verify', type : 'boolean', value : true, description : 'Enable verify mode')
option('debugging', type : 'boolean', value : true, description : 'Enable debug mode')
option('PROFILER_PRINT_EVERY', type : 'boolean', value : true, description : 'Print metrics on every call, not just on timer')
option('BLOCK_ZONE_CAPACITY', type : 'integer', value : 1129316352, description : 'Set SSD zone size (default is 1077MiB)')
option('READ_SLEEP_US', type : 'integer', value : 40430, description : 'Read delay in us')
option('PROFILING_INTERVAL_SEC', type : 'integer', value : 10, description : 'Interval to print metrics on (averaged)')
